# ioniq_electric_interface

./: DISCLAIMER.md  README.md
ioniq_electric_interface/: CMakeLists.txt  package.xml
ioniq_electric_interface/include/ioniq_driver/: acc_info.hpp  control_converter.hpp  eait_info_imu.hpp  eps_info.hpp  rad_info.hpp  report_converter.hpp  report_parser.hpp  spd_info.hpp  vector_independent_sig_msg.hpp
ioniq_electric_interface/include/ioniq_electric_interface/: additional_sig.hpp  control_command.hpp  ctrl_a.hpp  ctrl_b.hpp  imu_info.hpp  report_converter.hpp  report_parser.hpp
ioniq_electric_interface/launch/: ioniq_autoware_interface.launch.xml  ioniq_driver.launch.xml
ioniq_electric_interface/src/: Byte.cc  acc_info.cc  additional_sig.cc  control_command.cpp  control_command_node.cpp  control_converter.cpp  control_converter_node.cpp  ctrl_a.cc  ctrl_b.cc  eait_info_imu.cc  eps_info.cc  imu_info.cc  rad_info.cc  report_converter.cpp  report_converter_node.cpp  report_parser.cpp  report_parser_node.cpp  spd_info.cc  vector_independent_sig_msg.cc
ioniq_electric_msgs/: CMakeLists.txt  package.xml
ioniq_electric_msgs/msg/: AccInfo.msg  AdditionalSig.msg  CtrlA.msg  CtrlB.msg  EpsInfo.msg  ImuInfo.msg  RadInfo.msg  SpdInfo.msg  VectorIndependentSigMsg.msg
