<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ioniq_electric_interface</name>
  <version>0.9.0</version>
  <description>The ioniq_electric_interface package</description>
  <maintainer email="dutjdgns@gmail.com">Seonghun Yeo</maintainer>
  <license>Apache License 2.0</license>

  <depend>can_msgs</depend>
  <depend>ioniq_electric_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <depend>autoware_vehicle_msgs</depend>
  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_control_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>tier4_api_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
